cmake_minimum_required(VERSION 3.22)
project(Cpp-Tutorial-Exemple)

set(CMAKE_CXX_STANDARD 23)

add_executable(Cpp-Tutorial-Exemple main.cpp main.cpp "Telecom paris/applicationMainSynthese.h" "Telecom paris/consTypeGlobalVar.h" "Telecom paris/chainedListUtil.h" "Telecom paris/filesUtil.h" "Telecom paris/recordUtils.h" "Telecom paris/fileWriteInteractive.h")
